testsuite/tests/typecheck/should_fail/T5853.stderr

T5853.hs:15:52: error:
    • Could not deduce: Subst t1 (Elem t2) ~ t2
        arising from a use of ‘<$>’
      from the context: (F t,
                         Elem t ~ Elem t,
                         Elem t2 ~ Elem t2,
                         Subst t (Elem t2) ~ t2,
                         Subst t2 (Elem t) ~ t,
                         F t1,
                         Elem t1 ~ Elem t1,
                         Elem t ~ Elem t,
                         Subst t1 (Elem t) ~ t,
                         Subst t (Elem t1) ~ t1)
        bound by the RULE "map/map" at T5853.hs:15:2-57
      ‘t2’ is a rigid type variable bound by
        the RULE "map/map" at T5853.hs:15:2
    • In the expression: (f . g) <$> xs
      When checking the transformation rule "map/map"
    • Relevant bindings include
        f :: Elem t -> Elem t2 (bound at T5853.hs:15:19)
        g :: Elem t1 -> Elem t (bound at T5853.hs:15:21)
        xs :: t1 (bound at T5853.hs:15:23)
